--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
-  font-family: '-apple-system,BlinkMacSystemFont,Helvetica,"Segoe UI",Arial,sans-serif';
+  font-family: -apple-system,BlinkMacSystemFont,Helvetica,"Segoe UI",Arial,sans-serif;
   font-size: 16px;
 }
 ol, ul {
