--- a/src/static/login/login.css
+++ b/src/static/login/login.css
@@ -21,6 +21,7 @@
 /* helpers/grid.css */
 
 .grid {
+  position: relative;
   margin-left: auto;
   margin-right: auto;
   max-width: 320px;
@@ -111,17 +112,22 @@ input {
   transition: background-color 0.3s;
 }
 
-input[type='submit'] {
+ .button--submit {
   cursor: pointer;
 }
 
 .form {
   margin: -14px;
   margin: -0.875rem;
+  transition: all 300ms ease-out;
+}
+
+.login--hidden {
+  right: 60vw;
 }
 
 .form input[type='password'],
-.form input[type='text'],
+.form .button--submit,
 .form input[type='submit'] {
   width: 100%;
 }
@@ -149,7 +155,8 @@ input[type='submit'] {
 .login label,
 .login input[type='text'],
 .login input[type='password'],
-.login input[type='submit'] {
+.login input[type='email'],
+ .button--submit {
   border-radius: 0.25rem;
   padding: 16px;
   padding: 1rem;
@@ -166,7 +173,8 @@ input[type='submit'] {
 }
 
 .login input[type='password'],
-.login input[type='text'] {
+.login input[type='text'],
+.login input[type='email'] {
   background-color: #3b4148;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
@@ -175,22 +183,41 @@ input[type='submit'] {
 .login input[type='password']:focus,
 .login input[type='password']:hover,
 .login input[type='text']:focus,
-.login input[type='text']:hover {
+.login input[type='text']:hover,
+.login input[type='email']:focus,
+.login input[type='email']:hover {
   background-color: #434a52;
 }
 
-.login input[type='submit'] {
+#register--form {
+  right: -60vw;
+}
+
+ .button--submit {
   background-color: #ea4c88;
   color: #eee;
   font-weight: 700;
   text-transform: uppercase;
+  border: 0;
 }
 
-.login input[type='submit']:focus,
-.login input[type='submit']:hover {
+ .button--submit:focus,
+ .button--submit:hover {
   background-color: #d44179;
 }
 
+.input--incorrect {
+  border: 2px solid #d41c2c;
+}
+
+#error-message {
+  background-color: rgba(255, 0, 22, .6);
+  /* margin-bottom:  */
+}
+#error-message ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 /* modules/text.css */
 
 p {
@@ -202,4 +229,14 @@ p {
 
 .text--center {
   text-align: center;
+}
+.app--title {
+  color: white;
+  margin-bottom: 16px;
+}
+.position--absolute {
+  position: absolute;
+}
+.display--none {
+  display: none;
 }
